# glib_slim

./: .gitignore  CMakeLists.txt  Makefile  g.mk  glib.h  glibconfig.h  gmain.c  gmem.c  gstrfuncs.c
include/: glib.h  glibconfig.h
src/: garray.c  gbase64.c  ghash.c  glist.c  gmem.c  gstrfuncs.c
