
CMAKE_MINIMUM_REQUIRED(VERSION 3.9)

PROJECT(glib)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src GLIB_SRC)

MESSAGE(STATUS ${PROJECT_SOURCE_DIR})

MESSAGE(STATUS ${GLIB_SRC})

# SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build/lib)

MESSAGE(STATUS ${LIBRARY_OUTPUT_PATH})

ADD_LIBRARY(glib-shared SHARED ${GLIB_SRC})
SET_TARGET_PROPERTIES(glib-shared PROPERTIES OUTPUT_NAME "glib")

ADD_LIBRARY(glib-static STATIC ${GLIB_SRC})
SET_TARGET_PROPERTIES(glib-static PROPERTIES OUTPUT_NAME "glib")

ADD_EXECUTABLE(glib.exe gmain.c)
# LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})
TARGET_LINK_LIBRARIES(glib.exe glib-shared)

